PP-5299: The mandate bank statement reference is optional